team_ws/MinGeun-SMG/limo_fire_py/log/build_2025-12-05_16-58-10/limo_fire_py/stderr.log
  File "/home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/install/limo_fire_py/lib/python3.10/site-packages/limo_fire_py/fire_sensor_reader.py", line 97
    except UnicodeDecodeError as e:
    ^^^^^^
SyntaxError: invalid syntax

